# flask_basic_api

./: .gitignore  README.md  app.py  data.py  models.py  pyproject.toml
